# 6goasis_e2eorchestration

./: LICENSE  README.md
6GOASIS_NBC_CODE_FINAL/: LICENSE  README.md
6g-monitoring/: config.yaml  docker-compose.yml  prometheus.yml  start.sh  stop.sh
SRSRAN/: gnb_zmq.yaml  iperf_analysis_core.py  parsegNBlog.py  run_prov  subscriber_db.csv  uplink_noise.py
SRSRAN_Marco/: add_users.py  data_filler_iperf.py  data_filler_latency_v2.py  mergekpms3.py
client/: Dockerfile  aaguilar@10.1.24.50  carla6g.sh  carla_agent.py  carla_agent0.py  carla_agentA.py  carla_agentMWC.py  carla_agentMWC0.py  carla_agentMWC00.py  carla_agentSCN.py  carla_agentdimg.py  carla_agentmqtt.py  connected_vehicle.py  generate_traffic.py  locations.py  new_world.py  ok.py  rebuild_carla_client.sh  red_light_camera.py  set_red_light.py  test_cal.py  test_cam.py
cttc_xapp/: CMakeLists.txt  common.c  xapp_cttc.c  xapp_ebrahim.c.old
edge/: .~lock.data.csv#  .~lock.edgepf1717682347.csv#  .~lock.ejdelaysdelay_500_ms.csv#  Dockerfile  carla_edge6.py  carla_edgeSakin.sh  counter.py  delayer.py  edge_experiment.py  hota.py  make_dist_plots.py  pfilt.py  plot_data.py  plot_errors.py  plotter.py  requirements.txt  save_data2.py  test_metrics.py
helm/6goasis/: Chart.yaml  (+1 more)
kafka/: Dockerfile  kafka_external.yaml  kafka_test.py  log4j.properties  run_kafka.sh  server.properties  start-kafka.sh
namespaces/: Dockerfile  carla6g_no_docker_NS.sh  carla_agent_ns.py  carla_edge6.py  fake_kafka.py  kafka_namespaces.py  namespace_test.py  new_world.py  swithing_namespaces.py
scenario_runner/: Dockerfile
(+116 files in other folders)
